Fix some layout issue

--- a/assets/modules/templates/bootstrap.scss
+++ b/assets/modules/templates/bootstrap.scss
@@ -60,6 +60,6 @@ nav.navbar {
     }
 }
 
-legend {
+form >legend {
     border-bottom: 2px solid $gray-700;
 }
